# opds_server

./: .gitignore  Cargo.toml
src/: main.rs
src/lib/: lib.rs
src/lib/database/: lib_rus_ec.rs  mod.rs
src/lib/impls/: authors.rs  books.rs  genres.rs  mod.rs  series.rs
src/lib/opds/: mod.rs
src/lib/utils/: mod.rs
test/: fb2-749200-750279.db
