[package]
name = "fb2server"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "fb2server"
path = "src/bin/main.rs"

[dependencies]
    anyhow = "1.0"
    actix-web = "4.2"
    sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite" ] }
    log = "0.4"
    env_logger = "0.9"
    quick-xml = "0.26.0"
    chrono = "0.4"
