[package]
name = "opds_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "opds_server"
path = "src/bin/main.rs"

[dependencies]
    anyhow = "1.0"
    actix-web = "4"
    actix-files = "0.6"
    sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite" ] }
    log = "0.4"
    env_logger = "0.10"
    quick-xml = "0.28"
    chrono = "0.4"
    lazy_static = "1.4"
    regex = "1.7"
    zip = "0.6"
    itertools = "0.10"

